cmake_minimum_required(VERSION 3.3)
project(Prog2)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c99")

add_executable(Extras_cores Extras/cores.c)
add_executable(0.1 Aula0_Conceitos_base/01.c)
add_executable(0.2 Aula0_Conceitos_base/02.c)
add_executable(0.3 Aula0_Conceitos_base/03.c)
add_executable(0.4 Aula0_Conceitos_base/04.c)
add_executable(0.5 Aula0_Conceitos_base/05.c)
add_executable(0.6 Aula0_Conceitos_base/06.c)
add_executable(0.7 Aula0_Conceitos_base/07.c)
add_executable(0.8 Aula0_Conceitos_base/08.c)
add_executable(0.9 Aula0_Conceitos_base/09.c)
add_executable(0.10 Aula0_Conceitos_base/10.c)
add_executable(0.11.1 Aula0_Conceitos_base/11_ADDREV.c)
add_executable(0.11.2 Aula0_Conceitos_base/11_HELLOKIT.c)
add_executable(1.1.1 Aula1_Ficheiros_e_Formatos_de_dados/01.1.c)
add_executable(1.1.3 Aula1_Ficheiros_e_Formatos_de_dados/01.3.c)
add_executable(1.2 Aula1_Ficheiros_e_Formatos_de_dados/02.c)
add_executable(1.3 Aula1_Ficheiros_e_Formatos_de_dados/03.c)
add_executable(1.4 Aula1_Ficheiros_e_Formatos_de_dados/04.c)
add_executable(1.5 Aula1_Ficheiros_e_Formatos_de_dados/05.c)
add_executable(2.1 Aula2_Alocacao_dinamica_de_memoria_e_vetores/01.c)
add_executable(2.2 Aula2_Alocacao_dinamica_de_memoria_e_vetores/02.c)
add_executable(2.3.2 Aula2_Alocacao_dinamica_de_memoria_e_vetores/03.2_.c Aula2_Alocacao_dinamica_de_memoria_e_vetores/vetor.c Aula2_Alocacao_dinamica_de_memoria_e_vetores/vetor.h)
add_executable(2.3.3 Aula2_Alocacao_dinamica_de_memoria_e_vetores/03.3_.c)
add_executable(3.1 Aula3_vetores_e_algoritmos_de_pesquisa_e_ordenacao/01.c Aula3_vetores_e_algoritmos_de_pesquisa_e_ordenacao/vetor.c Aula3_vetores_e_algoritmos_de_pesquisa_e_ordenacao/vetor.h)
add_executable(3.2 Aula3_vetores_e_algoritmos_de_pesquisa_e_ordenacao/02.c)