cmake_minimum_required(VERSION 3.3)
project(Prog2)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c99")

add_executable(Extras_cores Extras/cores.c)
add_executable(0.1 Aula0_Conceitos_base/01.c)
add_executable(0.2 Aula0_Conceitos_base/02.c)
add_executable(0.3 Aula0_Conceitos_base/03.c)
add_executable(0.4 Aula0_Conceitos_base/04.c)
add_executable(0.5 Aula0_Conceitos_base/05.c)
add_executable(0.6 Aula0_Conceitos_base/06.c)
add_executable(0.7 Aula0_Conceitos_base/07.c)
add_executable(0.8 Aula0_Conceitos_base/08.c)
add_executable(0.9 Aula0_Conceitos_base/09.c)
add_executable(0.10 Aula0_Conceitos_base/10.c)
add_executable(0.11.1 Aula0_Conceitos_base/11_ADDREV.c)
add_executable(0.11.2 Aula0_Conceitos_base/11_HELLOKIT.c)
add_executable(1.1.1 Aula1_Ficheiros_e_Formatos_de_dados/01.1.c)
add_executable(1.1.3 Aula1_Ficheiros_e_Formatos_de_dados/01.3.c)
add_executable(1.2 Aula1_Ficheiros_e_Formatos_de_dados/02.c)
add_executable(1.3 Aula1_Ficheiros_e_Formatos_de_dados/03.c)
add_executable(1.4 Aula1_Ficheiros_e_Formatos_de_dados/04.c)
add_executable(1.5 Aula1_Ficheiros_e_Formatos_de_dados/05.c)
add_executable(2.1 Aula2_Alocacao_dinamica_de_memoria_e_vetores/01.c)
add_executable(2.2 Aula2_Alocacao_dinamica_de_memoria_e_vetores/02.c)
add_executable(2.3.2 Aula2_Alocacao_dinamica_de_memoria_e_vetores/03.2_.c Aula2_Alocacao_dinamica_de_memoria_e_vetores/vetor.c Aula2_Alocacao_dinamica_de_memoria_e_vetores/vetor.h)
add_executable(2.3.3 Aula2_Alocacao_dinamica_de_memoria_e_vetores/03.3_.c)
add_executable(3.1 Aula3_Vetores_e_algoritmos_de_pesquisa_e_ordenacao/01.c Aula3_Vetores_e_algoritmos_de_pesquisa_e_ordenacao/vetor.c Aula3_Vetores_e_algoritmos_de_pesquisa_e_ordenacao/vetor.h)
add_executable(3.2 Aula3_Vetores_e_algoritmos_de_pesquisa_e_ordenacao/02.c)
add_executable(3.e.3 Aula3_Vetores_e_algoritmos_de_pesquisa_e_ordenacao/Extras/03.c)
add_executable(4 Aula4_Listas_T1/lista-teste.c Aula4_Listas_T1/lista.c Aula4_Listas_T1/lista.h)
add_executable(5.1 Aula5_Filas_e_Pilhas/1/teste_armazem.c Aula5_Filas_e_Pilhas/1/armazem.h Aula5_Filas_e_Pilhas/1/armazem.c Aula5_Filas_e_Pilhas/1/contentor.h Aula5_Filas_e_Pilhas/1/contentor.c Aula5_Filas_e_Pilhas/1/fila_contentores.c Aula5_Filas_e_Pilhas/1/fila_contentores.h Aula5_Filas_e_Pilhas/1/pilha_contentores.c Aula5_Filas_e_Pilhas/1/pilha_contentores.h)
add_executable(MTE1.1 Extras/Miniteste1-Exemplo/1/prob1.c Extras/Miniteste1-Exemplo/1/vetor.c Extras/Miniteste1-Exemplo/1/vetor.h Extras/Miniteste1-Exemplo/1/lista.c Extras/Miniteste1-Exemplo/1/lista.h)
add_executable(MTE1.2 Extras/Miniteste1-Exemplo/2/prob2.c)
add_executable(MTE2.1 Extras/Miniteste2-Exemplo/1/prob1.c Extras/Miniteste2-Exemplo/1/vetor.c Extras/Miniteste2-Exemplo/1/vetor.h Extras/Miniteste2-Exemplo/1/lista.c Extras/Miniteste2-Exemplo/1/lista.h)
add_executable(MTE2.2 Extras/Miniteste2-Exemplo/2/prob2.c)
add_executable(6.Challenge Aula6_Challenge/challenge.c)
add_executable(7.1 Aula7_Arvores/arvores-teste.c Aula7_Arvores/avl.c Aula7_Arvores/avl.h Aula7_Arvores/bst.c Aula7_Arvores/bst.h)
add_executable(8 Aula8_Grafos_T2/grafo-teste.c Aula8_Grafos_T2/grafo.h Aula8_Grafos_T2/grafo.c Aula8_Grafos_T2/vetor.h Aula8_Grafos_T2/vetor.c)